遊戲新增: 更改腳色名稱功能

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
@@ -86,6 +86,7 @@
                 <div id="confirmWin-text">
                     N/A
                 </div>
+                <input id="confirmWin-fillin" maxlength="7" type="text"  style="display:none;" />
             </div>
             <button id="confirmWinBTN" onclick="closeConfirmWin()">確認</button>
         </div>
