※Cart頁面 ●刪除頁面上購物車的商品以及session

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/MemberLogin/Login.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/MemberLogin/Login.cshtml
@@ -60,13 +60,13 @@
                                 <div class="row">
                                     <div>
                                         <label for="txtEmail">電子信箱：</label>
-                                        <input type="text" class="form-control" name="txtEmail"
+                                        <input type="email" class="form-control" name="txtEmail"
                                                placeholder="email" value="seoari@gmail.com" required>
                                         <div class="invalid-feedback"> 請輸入電子信箱</div>
                                     </div>
                                     <div>
                                         <label for="txtPassword">密碼：</label>
-                                        <input type="text" class="form-control" name="txtPassword"
+                                        <input type="password" class="form-control" name="txtPassword"
                                                placeholder="password" value="a12345" required>
                                         <div class="invalid-feedback"> 請輸入密碼 </div>
                                     </div>
