--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Cart.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Cart.cshtml
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.1/mdb.min.css">
     <link rel="stylesheet" href="~/css/onlyCart.css">
     <link rel="stylesheet" href="~/css/bootstrap.min.css">
+
     <!-- Site CSS -->
     <link rel="stylesheet" href="~/css/style.css">
     <!-- Responsive CSS -->
@@ -19,6 +20,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="~/css/custom.css">
     <link rel="stylesheet" href="~/css/myCss.css" />
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
 }
 
 <!-- Start All Title Box -->
@@ -44,34 +46,35 @@
             <!-- cart -->
             <div class="col-lg-9 order-1 order-sm-1 order-md-1 order-xs-1">
                 <div class="card border shadow-0">
-                    <div id="goToDetail" class="m-4">
+                    <div id="goToDetail" class="m-4" >
                         @{
-                            if(Model!=null)
-                            foreach (var item in Model)
-                            {
+                            if (Model != null)
+                                foreach (var item in Model)
+                                {
 
-                                    <div class="row gy-3 mb-4">
+                                    <div class="row gy-3 mb-4" data-cid=" @item.cId">
                                         <div class="col-lg-5">
                                             <div class="me-lg-5">
                                                 <div class="d-flex">
                                                     <img src="@item.cImgPath" class="border rounded me-3" style="width: 96px; height: 96px;" />
                                                     <div class="ml-5 mt-2">
-                                                            <a href="@Url.Action("ShopDetail", "Index", new {pId = item.cId })" class="shop-prod-click nav-link">@item.cName</a>
+                                                    
+                                                        <a href="@Url.Action("ShopDetail", "Index", new {pId = item.cId })" class="shop-prod-click nav-link">@item.cName</a>
                                                         <div class="">
                                                             <select data-product-id=@item.cId class="sel-attr form-select for-detail-select me-4">
 
-                                                                @if (item.c子項目 != null && item.c其他子項目!=null)
+                                                                @if (item.c子項目 != null && item.c其他子項目 != null)
                                                                 {
-                                                                        <option value="@item.c子項目" selected>@item.c子項目</option>
+                                                                    <option value="@item.c子項目" selected>@item.c子項目</option>
 
                                                                     foreach (var attr in item.c其他子項目)
                                                                     {
-                                                                            <option value="@attr">@attr</option>
+                                                                        <option value="@attr">@attr</option>
                                                                     }
                                                                 }
                                                                 else
                                                                 {
-                                                                        <option value="商品">商品</option>
+                                                                    <option value="商品">商品</option>
                                                                 }
                                                             </select>
                                                         </div>
@@ -82,10 +85,10 @@
                                         <div class="col-lg-2 col-sm-6 col-6 d-flex flex-row flex-lg-column flex-xl-row text-nowrap">
 
 
-                                                <div class="mt-2">
-                                                    <span>數量</span>
-                                                    <input data-product-id=@item.cId value=@item.c數量 min="1" max=@item.c剩餘庫存 class="form-control me-4 input-quantity" type="number" />
-                                                </div>
+                                            <div class="mt-2">
+                                                <span>數量</span>
+                                                <input data-product-id=@item.cId value=@item.c數量 min="1" max=@item.c剩餘庫存 class="form-control me-4 input-quantity" type="number" />
+                                            </div>
 
                                             <div class="mt-2 ml-5">
                                                 <p class=" mb-0">價格</p>
@@ -94,13 +97,18 @@
                                             </div>
                                         </div>
                                         <div class="col-lg col-sm-6 d-flex flex-column justify-content-center align-items-sm-center align-items-md-start align-items-lg-center align-items-xl-end mb-2">
-                                            <div class="float-md-end">
-                                                <a href="#" class="btn btn-light border  icon-hover-danger"> 移除</a>
+                                            <div class="float-md-end ">
+                                                <button class="trashBtn" id="trashButton" data-cid=" @item.cId">
+                                                    <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+                                                        <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5Zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5Zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6Z" />
+                                                        <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1ZM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118ZM2.5 3h11V2h-11v1Z" />
+                                                    </svg>
+                                                </button>
                                             </div>
                                         </div>
                                         <hr class="for-hr">
                                     </div>
-                            }
+                                }
                         }
 
                     </div>
@@ -200,34 +208,39 @@
     <script src="~/js/form-validator.min.js"></script>
     <script src="~/js/contact-form-script.js"></script>
     <script src="~/js/custom.js"></script>
+    <script src="~/js/Cart.js"></script>
+    //sweetalert
+    <!--SWEET ALERT-->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <
     <script>
-    //動作:變更購物車內的數量，傳回值，在後端/ProductApi/CartEditQuantity中更新至session
-        var cartItem=$('.shop-prod-click');
+        //動作:變更購物車內的數量，傳回值，在後端/ProductApi/CartEditQuantity中更新至session
+        var cartItem = $('.shop-prod-click');
         var inputQuantity = $('.input-quantity');
 
         inputQuantity.on('change', function () {
-        var newValue = $(this).val();// 獲取輸入的新值
-        var selAttrForQuantity = $(this).closest('.row').find('.sel-attr'); // 選取同一行內的子選項
-        var attr = selAttrForQuantity.val();//獲取選到的商品的子選項
-        var productId = $(this).data('product-id')
-        console.log('New value:', newValue);
-        // 在這裡可以使用 Ajax 將新值傳回後端
-        $.ajax({
-            url: '/ProductApi/CartEditQuantity',
-            type: 'POST',
-            data: { newQuantity: newValue, pId:productId, attr: attr },
-            dataType: 'json',
-            success: function (response) {
-                console.log('Quantity updated:', response.message);
-            },
-            error: function (error) {
-                console.error('Ajax Error:', error);
-            }
+            var newValue = $(this).val();// 獲取輸入的新值
+            var selAttrForQuantity = $(this).closest('.row').find('.sel-attr'); // 選取同一行內的子選項
+            var attr = selAttrForQuantity.val();//獲取選到的商品的子選項
+            var productId = $(this).data('product-id')
+            console.log('New value:', newValue);
+            // 在這裡可以使用 Ajax 將新值傳回後端
+            $.ajax({
+                url: '/ProductApi/CartEditQuantity',
+                type: 'POST',
+                data: { newQuantity: newValue, pId: productId, attr: attr },
+                dataType: 'json',
+                success: function (response) {
+                    console.log('Quantity updated:', response.message);
+                },
+                error: function (error) {
+                    console.error('Ajax Error:', error);
+                }
+            });
         });
-    });
 
-        
-    //動作:變更購物車內的項目，傳回值，在後端/ProductApi / CartEditQuantity中更新至session
+
+        //動作:變更購物車內的項目，傳回值，在後端/ProductApi / CartEditQuantity中更新至session
         var selAttr = $('.sel-attr');
         var oldAttr; // 儲存舊值的變數
         // 在點擊下拉選單時更新舊值變數
@@ -281,6 +294,10 @@
                 }
             });
         });
+
+    
+        
+
 
 
 
