--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Cart.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Cart/Cart.cshtml
@@ -92,7 +92,7 @@
 
                                             <div class="mt-2 ml-5">
                                                 <p class=" mb-0">價格</p>
-                                                <span class="h6">$ @item.c小計</span><br />
+                                                <span class="h6 sub-total-price">$ @item.c小計</span><br />
                                                 <small class="text-muted text-nowrap">$ @item.cPrice</small><small>/份</small>
                                             </div>
                                         </div>
