--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Member/Member.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Member/Member.cshtml
@@ -40,6 +40,16 @@
         paginate_button:hover {
             background-color: unset !important;
         }
+
+        /* 選中行的背景顏色 */
+       .selected-cell {
+            background-color: #2079fd !important; /* 將“blue”替換為您想要的藍色選中行的背景顏色 */
+            color: #fff !important; /* 調整文字顏色以確保可讀性 */
+        }
+
+        .checkbox-css {
+            outline: 2px solid #FFF;
+        }
     </style>
 }
 
@@ -158,6 +168,7 @@
                     <thead>
                         <tr>
                             <th></th>
+                            <th>勾選</th>
                             <th>ID</th>
                             <th>姓名</th>
                             <th>帳號</th>
@@ -435,6 +446,10 @@
     <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/buttons/2.4.1/js/buttons.html5.min.js"></script>
     <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/buttons/2.4.1/js/buttons.print.min.js"></script>
 
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/fixedcolumns/4.3.0/js/dataTables.fixedColumns.min.js"></script>
+
+    @*<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/select/1.7.0/js/dataTables.select.min.js"></script>*@
+
     <script>
         let isVaild = ""; //驗證bool
         let isVaild_mail = "";
@@ -591,10 +606,17 @@
             },
             "columns": [
                 {
+                    data: null,
+                    orderable: false, // Disable sorting for this column
+                    render: function (data, type, row, meta) {
+                        return '';
+                    }
+                },
+                {
                     data: null, // Checkbox列
                     orderable: false, // Disable sorting for this column
                     render: function (data, type, row, meta) {
-                        return '<input type="checkbox" class="row-checkbox" data-memberid="' + row.memberId + '">';
+                        return '<input type="checkbox" class="row-checkbox checkbox-css" data-email="' + row.email + '">';
                     }
                 },
                 //這裡要注意json裡面是大寫還是小寫
@@ -630,15 +652,20 @@
                 },
             ],
             columnDefs: [
-                { targets: 7, searchable: true },
+                //{ targets: 7, searchable: true },
                 // { targets: 5, searchable: true }
                 // 其他列...
                 {
+                    targets: 7,
+                    searchable: true,
                     orderable: false,
                     className: 'select-checkbox',
                     targets: 0
                 }
             ],
+            fixedColumns: {
+                left: 2
+            },
             select: {
                 style: 'os',
                 selector: 'td:first-child'
@@ -646,11 +673,36 @@
             "paging": true, //分頁功能
             responsive: true, //RWD
             // "searching": false, //隱藏搜尋框
+            //參考資料https://stackoverflow.com/questions/32629949/show-entries-dropdown-disappear-when-using-export-tools
             dom: 'Bfrtip',
             buttons: [
-                'copy', 'excel', 'print',
+                'pageLength', 'copy', 'csv', 'excel', 'print'
             ],
             "order": [[0, 'desc']]  // 在這裡指定初始排序的列和順序，0 表示第一列（memberId），'desc' 表示降序
+        });
+
+
+        var selectedEmails = []; // 儲存選中email的陣列
+        // 監聽checkbox變更事件
+        $('#member-table tbody').on('change', '.row-checkbox', function () {
+            var isChecked = $(this).is(':checked');
+            var $row = $(this).closest('tr');
+            var emailValue = $(this).data('email'); // 使用data-email屬性來取得email的值
+
+            if (isChecked) {
+                $row.addClass('selected-row'); // 添加選中行的背景顏色
+                selectedEmails.push(emailValue); // 將email值加入陣列中
+
+                console.log('Selected emails:', selectedEmails);
+            } else {
+                $row.removeClass('selected-row'); // 移除選中行的背景顏色
+                var index = selectedEmails.indexOf(emailValue);
+                if (index !== -1) {
+                    selectedEmails.splice(index, 1); // 從陣列中移除email值
+
+                    console.log('Selected emails:', selectedEmails);
+                }
+            }
         });
 
         // 選取 "copy" 按鈕的 DOM 元素
