修改: 完成首次改名免費功能

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Shared/CatCha_Layout.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Shared/CatCha_Layout.cshtml
@@ -132,7 +132,7 @@
                             if (!string.IsNullOrEmpty(userName))
                             {
                                 <li class="Login">
-                                    <a id="loginLink" asp-controller="MemberLogin" asp-action="Login">
+                                    <a id="loginLink" asp-controller="Membership" asp-action="Membership">
                                         <span class="LoginText">Hello, @userName</span>
                                     </a>
                                 </li>
